# Habit_tracker

./: .env.sample  .flake8  Dockerfile  Readme.md  docker-compose.yaml  pyproject.toml
config/: __init__.py  celery.py  settings.py  urls.py
habits/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
